# rocqet-search

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  DEPLOY.md  Dockerfile  Dockerfile.api  README.md  SEARCH.md  deploy.sh  docker-compose.yml  next-sitemap.config.js  package-lock.json  package.json  pyproject.toml  railway.toml  requirements-api.txt
.github/workflows/: ci.yml
app/: page.tsx
docs/: BENCHMARKS.md
lib/: api.ts
public/: robots.txt  sitemap-0.xml  sitemap.xml
rocqet/: __init__.py  api.py  describe.py  embedder.py  enrich.py  eval.py  extract.py  mcp_server.py  mine_eval.py  rerank.py  validate.py
rocqet.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
roqet/: api.py  embedder.py  extract.py  fetch.py  rerank.py  schema.py
scripts/: attach_mathcomp_nl.py  build_index.sh  eval_mathcomp_ab.sh  index_cloud.sh  make_query_eval.py  nl_ranks.py
tests/: __init__.py  test_extract.py  test_schema.py
web/app/: layout.tsx  page.tsx
web/public/: sitemap-0.xml
