[project]
name = "rocqet"
version = "0.1.0"
description = "Semantic search for Rocq/Coq mathematical libraries"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
  "qdrant-client>=1.9",
  "pydantic>=2",
]

# Embedder backends are opt-in (imported lazily), so the base install stays slim.
#   serve  -> hosted API: fastembed (ONNX, no torch) — small image, low RAM
#   local  -> sentence-transformers (torch) for local indexing/eval
#   openai -> OpenAI embeddings backend
#   mcp    -> the MCP server (a thin HTTP client; needs none of the index deps)
#   dev    -> tooling + test deps
[project.optional-dependencies]
serve = ["fastembed>=0.3"]
local = ["sentence-transformers>=2.7"]
openai = ["openai>=1.30"]
mcp = ["mcp>=1.2", "httpx>=0.27"]
dev = ["ruff>=0.4", "pytest>=8", "httpx>=0.27"]

[project.scripts]
rocqet-extract = "rocqet.extract:main"
rocqet-fetch = "rocqet.fetch:main"
rocqet-enrich = "rocqet.enrich:main"
rocqet-index = "rocqet.embedder:main"
rocqet-validate = "rocqet.validate:main"
rocqet-describe = "rocqet.describe:main"
rocqet-mcp = "rocqet.mcp_server:main"

[tool.setuptools.packages.find]
include = ["rocqet*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
